--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -98,16 +98,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1628688c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Numpy codes are  at"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "1d97303b",
    "metadata": {},
@@ -130,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "13d02f1a",
    "metadata": {},
    "outputs": [
@@ -163,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "e4600045",
    "metadata": {},
    "outputs": [
@@ -187,13 +177,332 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "0099278c",
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ede15052",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6 7 8 9]\n",
+      "<class 'numpy.ndarray'>\n",
+      "************************************************************\n",
+      "[10 20 30 40]\n",
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
    "source": [
-    "## Ndarray:\n",
-    "           The array object in NumPy is called ndarray"
+    "# creat a numpy  array using list\n",
+    "\n",
+    "arr = np.array ([1,2,3,4,5,6,7,8,9])\n",
+    "print(arr)\n",
+    "print(type(arr))\n",
+    "\n",
+    "print('*'*60)\n",
+    "\n",
+    "lst = [10,20,30,40]\n",
+    "ar = np.array(lst)\n",
+    "print(ar)\n",
+    "print(type(ar))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "4bf39451",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6 7 8 9]\n",
+      "Number of dimention: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# how to access the element\n",
+    "# its 1-D array\n",
+    "arr = np.array([1,2,3,4,5,6,7,8,9])\n",
+    "print(arr)\n",
+    "# lets check the dimentions of the array\n",
+    "print('Number of dimention:',arr.ndim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "5e10534a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6]\n",
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# craete numpy array using tuple\n",
+    "\n",
+    "tup = (1,2,3,4,5,6)\n",
+    "ar = np.array(tup)\n",
+    "print(ar)\n",
+    "print(type(ar))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7cc35822",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# different dimentional arrays:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "53d1c142",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "<class 'numpy.ndarray'>\n",
+      "Dimention of array : 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. 0-D array\n",
+    "\n",
+    "arr = np.array (9)\n",
+    "print(arr)\n",
+    "print(type(arr))\n",
+    "print(\"Dimention of array :\",arr.ndim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "ebb23634",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1  2  3  4 45]\n",
+      "<class 'numpy.ndarray'>\n",
+      "Dimensons of array: 1\n",
+      "element present at 4th index: 45\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2. 1-D array \n",
+    "\n",
+    "arr= np. array([1,2,3,4,45])\n",
+    "print(arr)\n",
+    "print(type(arr))\n",
+    "print(\"Dimensons of array:\", arr.ndim)\n",
+    "\n",
+    "# access element an 1-D Array \n",
+    "print ('element present at 4th index:', arr[4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "b0299420",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]]\n",
+      "<class 'numpy.ndarray'>\n",
+      "Dimention of array: 2\n",
+      "Element present at lst in axis 0: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3 2-D array \n",
+    "# Arrray having 1- D array as input eleement ara called as  2-D array\n",
+    "\n",
+    "arr = np.array([[1,2,3],[4,5,6]])\n",
+    "print(arr)\n",
+    "print(type(arr))\n",
+    "print(\"Dimention of array:\",arr.ndim)\n",
+    "\n",
+    "# Acess eleemn an 2-D  array\n",
+    "# Array having 1-D array as input element are called as 2-D array\n",
+    "\n",
+    "\n",
+    "print('Element present at lst in axis 0:',arr[0,1]) # array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d67522fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3 4]\n",
+      " [4 5 6 7]\n",
+      " [4 5 6 7]\n",
+      " [4 5 6 7]]\n",
+      "Dimention: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "ar = [[1,2,3,4],[4,5,6,7],[4,5,6,7],[4,5,6,7]]\n",
+    "arr = np.array(ar)\n",
+    "print(arr)\n",
+    "print(\"Dimention:\",arr.ndim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "9400c567",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3 4]\n",
+      " [4 5 6 7]\n",
+      " [4 5 6 7]\n",
+      " [4 5 6 7]]\n",
+      "Dimention: 2\n",
+      "************************************************************\n",
+      "arr[0][3]: 4\n",
+      "************************************************************\n",
+      "arr[0]: [1 2 3 4]\n",
+      "************************************************************\n",
+      "arr[0][2]: 3\n",
+      "************************************************************\n",
+      "arr[1]: [4 5 6 7]\n",
+      "arr[3,1]: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Access the element of 2-D array\n",
+    "\n",
+    "\n",
+    "print(arr)\n",
+    "#dimention\n",
+    "print(\"Dimention:\",arr.ndim)\n",
+    "print('*'*60)\n",
+    "\n",
+    "#one way is to write\n",
+    "print('arr[0][3]:',arr[0][3])\n",
+    "print('*'*60)\n",
+    "\n",
+    "print('arr[0]:',arr[0])\n",
+    "print('*'*60)\n",
+    "\n",
+    "print('arr[0][2]:',arr[0][2])\n",
+    "print('*'*60)\n",
+    "\n",
+    "#anather way is like\n",
+    "print('arr[1]:',arr[1])\n",
+    "print('arr[3,1]:',arr[3,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "4eb8ccb4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1, 2, 3], [4, 5, 6]], [[10, 20, 30], [40, 50, 60]]]\n",
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#4].  3-D array\n",
+    "# array  that has 2-D array (matrices)as its element is called \n",
+    "\n",
+    "ar= [[[1,2,3],[4,5,6]],[[10,20,30],[40,50,60]]]\n",
+    "print(ar)\n",
+    "print(type(ar))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "746c725d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c9e916b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7bdbc43",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6fff7be6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "158795c9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ddfdf69",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
