--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "13d02f1a",
    "metadata": {},
    "outputs": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "e4600045",
    "metadata": {},
    "outputs": [
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ede15052",
+   "id": "3b71ea59",
    "metadata": {},
    "outputs": [
     {
@@ -211,8 +211,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "4bf39451",
+   "execution_count": 7,
+   "id": "f546bcf7",
    "metadata": {},
    "outputs": [
     {
@@ -235,8 +235,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "5e10534a",
+   "execution_count": 8,
+   "id": "2f6d1c45",
    "metadata": {},
    "outputs": [
     {
@@ -259,8 +259,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7cc35822",
+   "execution_count": 9,
+   "id": "ddb1f60a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "53d1c142",
+   "id": "1432d359",
    "metadata": {},
    "outputs": [
     {
@@ -294,8 +294,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "ebb23634",
+   "execution_count": 11,
+   "id": "e258bfe5",
    "metadata": {},
    "outputs": [
     {
@@ -323,8 +323,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "b0299420",
+   "execution_count": 12,
+   "id": "66d69e29",
    "metadata": {},
    "outputs": [
     {
@@ -357,8 +357,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "d67522fb",
+   "execution_count": 13,
+   "id": "dc6458d2",
    "metadata": {},
    "outputs": [
     {
@@ -383,8 +383,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "9400c567",
+   "execution_count": 14,
+   "id": "a4e42afe",
    "metadata": {},
    "outputs": [
     {
@@ -434,8 +434,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "4eb8ccb4",
+   "execution_count": 15,
+   "id": "6b052a28",
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,16 @@
      "output_type": "stream",
      "text": [
       "[[[1, 2, 3], [4, 5, 6]], [[10, 20, 30], [40, 50, 60]]]\n",
-      "<class 'list'>\n"
+      "<class 'list'>\n",
+      "************************************************************\n",
+      "[[[ 1  2  3]\n",
+      "  [ 4  5  6]]\n",
+      "\n",
+      " [[10 20 30]\n",
+      "  [40 50 60]]]\n",
+      "<class 'numpy.ndarray'>\n",
+      "****************************************************************************************************\n",
+      "Dimention of array: 3\n"
      ]
     }
    ],
@@ -453,53 +462,197 @@
     "\n",
     "ar= [[[1,2,3],[4,5,6]],[[10,20,30],[40,50,60]]]\n",
     "print(ar)\n",
-    "print(type(ar))"
+    "print(type(ar))\n",
+    "print('*'*60)\n",
+    "\n",
+    "arr=np.array(ar)\n",
+    "print(arr)\n",
+    "print(type(arr))\n",
+    "print('*'*100)\n",
+    "\n",
+    "print('Dimention of array:', arr.ndim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "a0696532",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 1  2  3]\n",
+      "  [ 4  5  6]]\n",
+      "\n",
+      " [[10 20 30]\n",
+      "  [40 50 60]]]\n",
+      "<class 'numpy.ndarray'>\n",
+      "****************************************************************************************************\n",
+      "One way is :\n",
+      "arr[1]: [[10 20 30]\n",
+      " [40 50 60]]\n",
+      "arr[0][0]: [1 2 3]\n",
+      "arr[0][0][2]: 3\n",
+      "****************************************************************************************************\n"
+     ]
+    }
+   ],
+   "source": [
+    "# access the element of the 3-D array \n",
+    "\n",
+    "print(arr)\n",
+    "print(type(arr))\n",
+    "print('*'*100)\n",
+    "\n",
+    "print('One way is :')\n",
+    "print('arr[1]:',arr[1])\n",
+    "print('arr[0][0]:',arr[0][0])\n",
+    "print('arr[0][0][2]:',arr[0][0][2])\n",
+    "\n",
+    "print('*'*100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "888d019b",
+   "metadata": {},
+   "source": [
+    "## Creat an n dimention array"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22ee9d8f",
+   "metadata": {},
+   "source": [
+    " lower dimention to lower dimention will possible by using  ndmin funtion for we need to go with array.reshape(funtion)\n",
+    " \n",
+    " \n",
+    " ndim = ..1./2/3/4/5/...\n",
+    " \n",
+    " but higher dimention to lower dimention will possible by using ndim function for we need to go with array.reshape() function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "2b691467",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[[[1 2 3 4]]]]]\n",
+      "Number of dimention: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# creat an n dimention array \n",
+    "arr = np.array([1,2,3,4],ndmin=5)\n",
+    "\n",
+    "print(arr)\n",
+    "print('Number of dimention:',arr.ndim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "d4b95d9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[[[[1, 2, 3]]]]]), 5)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# lower to higher is possible but higher to lower not possible\n",
+    "import numpy as np\n",
+    "arr1 = np.array([[[[[1,2,3]]]]],ndmin=3)\n",
+    "arr1,arr1.ndim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "6d15b433",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[[1, 2, 3]]]), 3)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr2 = np.array([1,2,3],ndmin=3)\n",
+    "arr2,arr2.ndim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "d22d0d8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[[[[1, 2, 3, 4]]]]]), 5)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr2=np.array([1,2,3],ndmin=3)\n",
+    "arr,arr.ndim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "1cc8238e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr11 = np.array([1,2,3,4])\n",
+    "arr10 = arr11.reshape((1,1,1,1,4))\n",
+    "arr10.ndim"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "746c725d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8c9e916b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a7bdbc43",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6fff7be6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "158795c9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2ddfdf69",
+   "id": "c469a8ba",
    "metadata": {},
    "outputs": [],
    "source": []
