--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -606,30 +606,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "d22d0d8a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([[[[[1, 2, 3, 4]]]]]), 5)"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "arr2=np.array([1,2,3],ndmin=3)\n",
-    "arr,arr.ndim"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 27,
-   "id": "1cc8238e",
+   "id": "164f7b12",
    "metadata": {},
    "outputs": [
     {
@@ -651,8 +629,146 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "id": "c80fc3c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 1  2  3]\n",
+      "  [ 4  5  6]]\n",
+      "\n",
+      " [[10 20 30]\n",
+      "  [40 50 60]]] 3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(2, 2, 3)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b = np.array([[[1,2,3],[4,5,6,]],[[10,20,30],[40,50,60]]])\n",
+    "print(b,b.ndim)\n",
+    "b.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "471eb475",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[[ 1,  2,  3],\n",
+       "         [ 4,  5,  6]],\n",
+       " \n",
+       "        [[10, 20, 30],\n",
+       "         [40, 50, 60]]]),\n",
+       " 3)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b=np.array ([[[1,2,3],[4,5,6]],[[10,20,30],[40,50,60]]])\n",
+    "b,b.ndim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "abdc2d62",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b[0,1,2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b609a779",
+   "metadata": {},
+   "source": [
+    "## Array Slicing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "fe3ae4dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[[[[1, 2, 3, 4]]]]]), 5, (1, 1, 1, 1, 4))"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr = np.array([1,2,3,4],ndmin=5)\n",
+    "arr,arr.ndim,arr.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "a7a9e8de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5d array slicing\n",
+    "\n",
+    "print(arr[0][0][0][0][0])\n",
+    "print(arr[0][0][0][0][1])\n",
+    "print(arr[0][0][0][0][2])\n",
+    "print(arr[0][0][0][0][3])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "c469a8ba",
+   "id": "cb782c26",
    "metadata": {},
    "outputs": [],
    "source": []
