--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "164f7b12",
+   "id": "63fef5b1",
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "c80fc3c2",
+   "id": "9927a200",
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "471eb475",
+   "id": "3a527fc7",
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "abdc2d62",
+   "id": "35b565fe",
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b609a779",
+   "id": "f01c7a66",
    "metadata": {},
    "source": [
     "## Array Slicing"
@@ -719,8 +719,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "fe3ae4dd",
+   "execution_count": 53,
+   "id": "cb682db7",
    "metadata": {},
    "outputs": [
     {
@@ -729,20 +729,21 @@
        "(array([[[[[1, 2, 3, 4]]]]]), 5, (1, 1, 1, 1, 4))"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "arr = np.array([1,2,3,4],ndmin=5)\n",
-    "arr,arr.ndim,arr.shape"
+    "arr,arr.ndim,arr.shape\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "a7a9e8de",
+   "id": "cbf80acd",
    "metadata": {},
    "outputs": [
     {
@@ -767,8 +768,194 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 58,
+   "id": "0909183c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6 7 8 9]\n",
+      "Length: 9\n",
+      "[6 7 8 9]\n",
+      "[1 2 3 4 5 6 7 8 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([1,2,3,4,5,6,7,8,9])\n",
+    "print(arr)\n",
+    "\n",
+    "# slice\n",
+    "print(\"Length:\",len(arr))\n",
+    "print(arr[5:9])\n",
+    "print(arr)\n",
+    "\n",
+    "# [start:end], start include ,end excluded"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "14b98b05",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6 7 8 9]\n",
+      "[1 2 3 4 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(arr)\n",
+    "print(arr[0:5])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df5c5e24",
+   "metadata": {},
+   "source": [
+    "## Negative indices"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7c0fd56",
+   "metadata": {},
+   "source": [
+    "####  Negative indices always start from last element of n-d \n",
+    "#### array i.e -1st index is last element of ndarray"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "94d13d49",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6 7 8 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "17f32e21",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "5\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(arr[-1])\n",
+    "print(arr[-5])\n",
+    "print(arr[-9])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "70a5d927",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6 7 8 9]\n",
+      "[1 3 5 7 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# step value in slincing a numpy array\n",
+    "# here step is 2 \n",
+    "print(arr)\n",
+    "print(arr[0:9:2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "2fe77166",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 3 5 7 9]\n",
+      "[1 3 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(arr[::2]) # ::2 >> 0 to 9 index by step index 2\n",
+    "print(arr[0:6:2]) # 0:6:2 >> 0 to 6 index by step value 2\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b614fb5e",
+   "metadata": {},
+   "source": [
+    "### Slincing O 2D Array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "8fb9b156",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4  5]\n",
+      " [ 6  7  8  9 10]]\n",
+      "\n",
+      "\n",
+      "8\n",
+      "[7 8 9]\n",
+      "[2 3 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np .array([[1,2,3,4,5],[6,7,8,9,10]])\n",
+    "\n",
+    "print (arr)\n",
+    "print('\\n')\n",
+    "print(arr[1,2])\n",
+    "print(arr[1,1:4]) # arr\n",
+    "print(arr[0,1:4])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "cb782c26",
+   "id": "0354c81a",
    "metadata": {},
    "outputs": [],
    "source": []
