--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "63fef5b1",
+   "id": "e2025f21",
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "9927a200",
+   "id": "32105482",
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "3a527fc7",
+   "id": "8a78cb53",
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "35b565fe",
+   "id": "450b13dd",
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f01c7a66",
+   "id": "289cf875",
    "metadata": {},
    "source": [
     "## Array Slicing"
@@ -720,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "cb682db7",
+   "id": "bee0f850",
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "cbf80acd",
+   "id": "bcd946aa",
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "0909183c",
+   "id": "1a94d546",
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +798,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "14b98b05",
+   "id": "4b9aa915",
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df5c5e24",
+   "id": "266d99cb",
    "metadata": {},
    "source": [
     "## Negative indices"
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7c0fd56",
+   "id": "13e93d15",
    "metadata": {},
    "source": [
     "####  Negative indices always start from last element of n-d \n",
@@ -835,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "94d13d49",
+   "id": "3da74c1b",
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "17f32e21",
+   "id": "1b12d43f",
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "70a5d927",
+   "id": "578ed77c",
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "2fe77166",
+   "id": "e9eaea46",
    "metadata": {},
    "outputs": [
     {
@@ -916,16 +916,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b614fb5e",
+   "id": "48347783",
    "metadata": {},
    "source": [
-    "### Slincing O 2D Array"
+    "### Slincing of 2D Array"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "8fb9b156",
+   "execution_count": 70,
+   "id": "2b25fc00",
    "metadata": {},
    "outputs": [
     {
@@ -954,11 +954,157 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 71,
+   "id": "2df6662f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4  5]\n",
+      " [ 6  7  8  9 10]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "cb309fe7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3],\n",
+       "       [8]])"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr[0:,2:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "42554337",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [6, 7, 8]])"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr[0:,:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "c835d755",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3])"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr[0,:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "3276e4da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(arr[0:1,0:3])  # arr[location index from to,element index]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "839f7955",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(arr[0:2,2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "817bacc3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4  5]\n",
+      " [10 20 30 40 50]\n",
+      " [11 22 33 44 55]]\n",
+      "15 (3, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([[1,2,3,4,5],[10,20,30,40,50],[11,22,33,44,55]])\n",
+    "print(arr)\n",
+    "print(arr.size,arr.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "0354c81a",
+   "id": "7b85054f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 2, 3 \n",
+    "# 20,30\n"
+   ]
   }
  ],
  "metadata": {
