Data type conversion

--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "e2025f21",
+   "id": "25ea1946",
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "32105482",
+   "id": "afa02c4a",
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "8a78cb53",
+   "id": "d1766a57",
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "450b13dd",
+   "id": "41de8007",
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "289cf875",
+   "id": "854ea6af",
    "metadata": {},
    "source": [
     "## Array Slicing"
@@ -720,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "bee0f850",
+   "id": "31b4ae31",
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "bcd946aa",
+   "id": "ddca17a1",
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "1a94d546",
+   "id": "a50c15f0",
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +798,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "4b9aa915",
+   "id": "47d35f0d",
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "266d99cb",
+   "id": "4dcd0132",
    "metadata": {},
    "source": [
     "## Negative indices"
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13e93d15",
+   "id": "c76a39fd",
    "metadata": {},
    "source": [
     "####  Negative indices always start from last element of n-d \n",
@@ -835,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "3da74c1b",
+   "id": "fb394ffb",
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "1b12d43f",
+   "id": "178d76a0",
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "578ed77c",
+   "id": "63ce502d",
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "e9eaea46",
+   "id": "8bfaa883",
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48347783",
+   "id": "719cc4ef",
    "metadata": {},
    "source": [
     "### Slincing of 2D Array"
@@ -925,7 +925,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "2b25fc00",
+   "id": "d1d2cf83",
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "2df6662f",
+   "id": "b39d49fa",
    "metadata": {},
    "outputs": [
     {
@@ -974,7 +974,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "cb309fe7",
+   "id": "c11292a9",
    "metadata": {},
    "outputs": [
     {
@@ -996,7 +996,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "42554337",
+   "id": "ce8ef5cc",
    "metadata": {},
    "outputs": [
     {
@@ -1018,7 +1018,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "c835d755",
+   "id": "0236caf5",
    "metadata": {},
    "outputs": [
     {
@@ -1039,7 +1039,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "3276e4da",
+   "id": "b91c673d",
    "metadata": {},
    "outputs": [
     {
@@ -1057,7 +1057,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "839f7955",
+   "id": "add27638",
    "metadata": {},
    "outputs": [
     {
@@ -1075,7 +1075,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "817bacc3",
+   "id": "c64a9556",
    "metadata": {},
    "outputs": [
     {
@@ -1097,14 +1097,471 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7b85054f",
+   "execution_count": 80,
+   "id": "dcd7678e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2  3]\n",
+      " [20 30]]\n",
+      "\n",
+      "\n",
+      "[[20 30 40]\n",
+      " [22 33 44]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2, 3 \n",
+    "# 20,30\n",
+    "print(arr[0:2,1:3])\n",
+    "\n",
+    "print('\\n')\n",
+    "\n",
+    "# 20,30,40\n",
+    "# 22,33,44\n",
+    "\n",
+    "print(arr[1:,1:4])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff1d7b0d",
+   "metadata": {},
+   "source": [
+    "## Slicing of 3D array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "d5caa718",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 1  2  3]\n",
+      "  [ 5  6  7]]\n",
+      "\n",
+      " [[11 22 33]\n",
+      "  [55 66 77]]]\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr   = np.array([[[1,2,3],[5,6,7]],[[11,22,33],[55,66,77]]])\n",
+    "print(arr)\n",
+    "print(arr.ndim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "b7748bd3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([6, 7])"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr[0][1][1:3] # [array location, array row location, array ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "ae01437c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([55, 66])"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr[1,1,0:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "373b3c33",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([66, 77])"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr[1][1][1:3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1e65195",
+   "metadata": {},
+   "source": [
+    "# Data types in Numpy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b96bde1",
+   "metadata": {},
+   "source": [
+    "# list of all data types in numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "4ab6e0fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1226495924.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn [88], line 3\u001b[1;36m\u001b[0m\n\u001b[1;33m    unit - unsigned intger\u001b[0m\n\u001b[1;37m                    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "i/Int -integer\n",
+    "Bool - boilean \n",
+    "unit - unsigned intger \n",
+    "f/Float - Complex Float\n",
+    "string - string\n",
+    "m - datatime\n",
+    "m - timedelta\n",
+    "o - object \n",
+    "U - unicode string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "7bfc06ac",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2, 3 \n",
-    "# 20,30\n"
+    "import numpy as np\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "b4ac831a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "int32\n"
+     ]
+    }
+   ],
+   "source": [
+    "# dype \n",
+    "\n",
+    "arr = np.array ([1,2,3,4])\n",
+    "print(arr.dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "abacab34",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<U6\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np. array(['apple','banana','cherry'])\n",
+    "print(arr.dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "e0d6f2ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1' '2' '3' '4']\n",
+      "<U1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# creating arrays with a defined data type\n",
+    "\n",
+    "arr = np.array([1,2,3,4],dtype=str)\n",
+    "print(arr)\n",
+    "print(arr.dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "b691ff28",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4]\n",
+      "int32\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([1,2,3,4],dtype='i')  #int\n",
+    "print(arr)\n",
+    "print(arr.dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "430b9daa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1. 2. 3. 4. 5. 6.]\n",
+      "float32\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([1,2,3,4,5,6],dtype='f')\n",
+    "print(arr)\n",
+    "print(arr.dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "1356f92a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1. 2. 3. 4. 5. 6.]\n",
+      "float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr= np.array([1,2,3,4,5,6],dtype='float')\n",
+    "print(arr)\n",
+    "print(arr.dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "daf82c45",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4]\n",
+      "int32\n",
+      "****************************************************************************************************\n",
+      "[1 2 3 4]\n",
+      "int32\n"
+     ]
+    }
+   ],
+   "source": [
+    "# int with 4 byts\n",
+    "\n",
+    "arr = np.array([1,2,3,4],dtype='i')\n",
+    "print(arr)\n",
+    "print(arr.dtype)\n",
+    "\n",
+    "print('*'*100)\n",
+    "\n",
+    "arr = np.array([1,2,3,4],dtype='i')\n",
+    "print(arr)\n",
+    "print(arr.dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "5aef4718",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# in python we are not responsible for memory management PVM is responsible for memory management"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07976245",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "b3e4b92a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np .array(['1','2','3'],dtype='i')\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c797f9f",
+   "metadata": {},
+   "source": [
+    "## Data Type Conversion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "5dc99c9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "old array : [1.1 2.2 3.3 4.4]\n",
+      "old array data type : float64\n",
+      "****************************************************************************************************\n",
+      "new array [1 2 3 4]\n",
+      "new array data type : int32\n"
+     ]
+    }
+   ],
+   "source": [
+    "# float to int\n",
+    "\n",
+    "arr = np.array([1.1,2.2,3.3,4.4])\n",
+    "print('old array :',arr)\n",
+    "print('old array data type :', arr.dtype)\n",
+    "print('*'*100)\n",
+    "new_arr = arr.astype('i')\n",
+    "print('new array',new_arr)\n",
+    "print('new array data type :',new_arr.dtype)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c1993dd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87886376",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5258f5e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1027fe5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c03758f1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d28e036b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe29db7a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
