--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "25ea1946",
+   "id": "74478a1f",
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "afa02c4a",
+   "id": "69184930",
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "d1766a57",
+   "id": "e463c1b5",
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "41de8007",
+   "id": "56c6fdf9",
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "854ea6af",
+   "id": "c8d65dea",
    "metadata": {},
    "source": [
     "## Array Slicing"
@@ -720,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "31b4ae31",
+   "id": "f18f3478",
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "ddca17a1",
+   "id": "d41f15e8",
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "a50c15f0",
+   "id": "e81edc47",
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +798,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "47d35f0d",
+   "id": "e6a9b38b",
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4dcd0132",
+   "id": "f0c69c2f",
    "metadata": {},
    "source": [
     "## Negative indices"
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c76a39fd",
+   "id": "a366c9ad",
    "metadata": {},
    "source": [
     "####  Negative indices always start from last element of n-d \n",
@@ -835,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "fb394ffb",
+   "id": "a0d069fc",
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "178d76a0",
+   "id": "6cb89027",
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "63ce502d",
+   "id": "77e98292",
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "8bfaa883",
+   "id": "37ac81b4",
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "719cc4ef",
+   "id": "403446b6",
    "metadata": {},
    "source": [
     "### Slincing of 2D Array"
@@ -925,7 +925,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "d1d2cf83",
+   "id": "1b4ef18f",
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "b39d49fa",
+   "id": "5a2be837",
    "metadata": {},
    "outputs": [
     {
@@ -974,7 +974,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "c11292a9",
+   "id": "28069311",
    "metadata": {},
    "outputs": [
     {
@@ -996,7 +996,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "ce8ef5cc",
+   "id": "5f9fac3c",
    "metadata": {},
    "outputs": [
     {
@@ -1018,7 +1018,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "0236caf5",
+   "id": "22919047",
    "metadata": {},
    "outputs": [
     {
@@ -1039,7 +1039,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "b91c673d",
+   "id": "d8cb62a3",
    "metadata": {},
    "outputs": [
     {
@@ -1057,7 +1057,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "add27638",
+   "id": "fa95241d",
    "metadata": {},
    "outputs": [
     {
@@ -1075,7 +1075,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "c64a9556",
+   "id": "2e7650fa",
    "metadata": {},
    "outputs": [
     {
@@ -1098,7 +1098,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "dcd7678e",
+   "id": "32f6f0ee",
    "metadata": {},
    "outputs": [
     {
@@ -1129,7 +1129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff1d7b0d",
+   "id": "aef4b32e",
    "metadata": {},
    "source": [
     "## Slicing of 3D array"
@@ -1138,7 +1138,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "d5caa718",
+   "id": "328b0e16",
    "metadata": {},
    "outputs": [
     {
@@ -1163,7 +1163,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "b7748bd3",
+   "id": "e2efcb38",
    "metadata": {},
    "outputs": [
     {
@@ -1184,7 +1184,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "ae01437c",
+   "id": "a578db83",
    "metadata": {},
    "outputs": [
     {
@@ -1205,7 +1205,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "373b3c33",
+   "id": "00db69b6",
    "metadata": {},
    "outputs": [
     {
@@ -1225,7 +1225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1e65195",
+   "id": "0603393c",
    "metadata": {},
    "source": [
     "# Data types in Numpy"
@@ -1233,7 +1233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b96bde1",
+   "id": "8a6c88b1",
    "metadata": {},
    "source": [
     "# list of all data types in numpy"
@@ -1242,7 +1242,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "4ab6e0fe",
+   "id": "801fa4c6",
    "metadata": {},
    "outputs": [
     {
@@ -1269,7 +1269,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "7bfc06ac",
+   "id": "649c25b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1279,7 +1279,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "b4ac831a",
+   "id": "d863ab1f",
    "metadata": {},
    "outputs": [
     {
@@ -1300,7 +1300,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "abacab34",
+   "id": "f7368647",
    "metadata": {},
    "outputs": [
     {
@@ -1319,7 +1319,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "e0d6f2ff",
+   "id": "63e1960c",
    "metadata": {},
    "outputs": [
     {
@@ -1342,7 +1342,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "b691ff28",
+   "id": "662b0ebb",
    "metadata": {},
    "outputs": [
     {
@@ -1363,7 +1363,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "430b9daa",
+   "id": "949a87ba",
    "metadata": {},
    "outputs": [
     {
@@ -1384,7 +1384,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "1356f92a",
+   "id": "e7ebf696",
    "metadata": {},
    "outputs": [
     {
@@ -1405,7 +1405,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "daf82c45",
+   "id": "df2b7de3",
    "metadata": {},
    "outputs": [
     {
@@ -1437,7 +1437,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "5aef4718",
+   "id": "af512620",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1446,14 +1446,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07976245",
+   "id": "028b4554",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "b3e4b92a",
+   "id": "eace06b6",
    "metadata": {},
    "outputs": [
     {
@@ -1471,7 +1471,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c797f9f",
+   "id": "99367fad",
    "metadata": {},
    "source": [
     "## Data Type Conversion"
@@ -1480,7 +1480,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "5dc99c9b",
+   "id": "221ad3d1",
    "metadata": {},
    "outputs": [
     {
@@ -1509,8 +1509,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 104,
+   "id": "4dbcfe47",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "old array: [1 2 3 4 0]\n",
+      "old array data type: int32\n",
+      "****************************************************************************************************\n",
+      "new array [ True  True  True  True False]\n",
+      "new array data type: bool\n"
+     ]
+    }
+   ],
+   "source": [
+    "# int to bool \n",
+    "arr = np.array([1,2,3,4,0])\n",
+    "print('old array:',arr)\n",
+    "print('old array data type:',arr.dtype)\n",
+    "print('*'*100)\n",
+    "new_arr = arr.astype (bool)\n",
+    "print('new array',new_arr)\n",
+    "print('new array data type:',new_arr.dtype)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb145231",
+   "metadata": {},
+   "source": [
+    "## Differance between copy and view"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e52b218b",
+   "metadata": {},
+   "source": [
+    "## Copy :\n",
+    "\n",
+    "\n",
+    "#### A copy is a new array that has the same data as the original array.changes made to the copy do not affect the original array, and vice versa\n",
+    "\n",
+    "\n",
+    "#### View :\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "8c1993dd",
+   "id": "1d1ade91",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1518,7 +1569,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87886376",
+   "id": "287267cb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1526,7 +1577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5258f5e",
+   "id": "6b06269b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1534,31 +1585,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1027fe5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c03758f1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d28e036b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fe29db7a",
+   "id": "ec33f804",
    "metadata": {},
    "outputs": [],
    "source": []
